# DNAproof

./: .gitignore  Cargo.toml  PRODUCTION_GUIDE.md  README.md  config.toml  routes_new.rs
.claude/: settings.local.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: decode.rs  encode.rs  mod.rs  simulate.rs  visualize.rs
crates/cli/src/display/: mod.rs  stats.rs  visualizer.rs
crates/core/: Cargo.toml
crates/core/benches/: decoding_benchmark.rs  density_benchmark.rs  encoding_benchmark.rs
crates/core/src/: bio.rs  codec.rs  constraints.rs  error.rs  lib.rs  logging.rs  performance.rs  sequence.rs
crates/core/src/bio/: illumina.rs
crates/core/src/codec/: adaptive.rs  concatenated.rs  decoder.rs  dictionary.rs  encoder.rs  enhanced_gc_aware.rs  enhanced_reed_solomon.rs  gc_aware_encoding.rs  gc_optimizer.rs  goldman_2013.rs  grass_2015.rs  huffman.rs  ldpc.rs  mod.rs  reed_solomon.rs  spreading.rs  ultimate.rs
crates/core/tests/: erlich_zielinski_2017_validation.rs  integration_tests.rs  roundtrip_tests.rs  roundtrip_validation.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: channel.rs  error_model.rs  lib.rs  metrics.rs
crates/storage/: Cargo.toml
crates/storage/migrations/postgres/: 0001_init.sql
crates/storage/migrations/sqlite/: 0001_init.sql
crates/storage/src/: database.rs  error.rs  index.rs  lib.rs  pool.rs  repository.rs
crates/utils/: Cargo.toml
crates/utils/src/: conversion.rs  lib.rs  math.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  main.rs  models.rs  routes.rs
crates/web/src/routes/: streaming_routes.rs
crates/web/static/css/: notifications.css
crates/web/static/js/: notifications.js
crates/web/templates/: base.html  decode.html  encode.html  index.html
docs/: GC_AWARE_ENCODING.md  PERFORMANCE_ANALYSIS.md  api_reference.md  encoding_schemes.md
