[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["adn"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bioinformatics
bio = "2.0"

# Compression
lz4 = "1.25"
zstd = "0.13"

# Error correction
reed-solomon = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Visualization
tabled = "0.16"

# Math and utilities
rand = "0.8"
rand_chacha = "0.3"

# Hashing
sha2 = "0.10"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.5"
criterion = "0.5"
