[package]
name = "adn-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
adn-core = { path = "../core" }
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
