[package]
name = "adn-web"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
actix-web = "4.9"
actix-files = "0.6"
actix-multipart = "0.7"

# Template engine
tera = "1.20"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID for job IDs
uuid = { workspace = true, features = ["serde", "v4"] }

# Core library
adn-core = { path = "../core" }

# Logging
env_logger = "0.11"
log = "0.4"
