[package]
name = "adn-web"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
actix-web = "4.9"
actix-files = "0.6"
actix-multipart = "0.7"
actix-cors = "0.7"

# Template engine
tera = "1.20"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID for job IDs
uuid = { workspace = true, features = ["serde", "v4"] }

# Date/time handling
chrono = { workspace = true }

# Core library
adn-core = { path = "../core" }
adn-storage = { path = "../storage" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# File upload/download
futures = "0.3"

# Configuration
config = "0.13"
